--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/stlyes.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Animal Shelter Website</title>
   </head>
   <body>
